--- a/asm/istio/options/cni-managed.yaml
+++ b/asm/istio/options/cni-managed.yaml
@@ -12,24 +12,25 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ---
+# yamllint disable rule:line-length
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: dataplanecontrols.mesh.cloud.google.com
 spec:
   additionalPrinterColumns:
-  - JSONPath: .status.state
-    name: Status
-    type: string
-  - JSONPath: .spec.proxyVersion
-    name: Version
-    type: string
-  - JSONPath: .spec.revision
-    name: Revision
-    type: string
-  - JSONPath: .metadata.creationTimestamp
-    name: Age
-    type: date
+    - JSONPath: .status.state
+      name: Status
+      type: string
+    - JSONPath: .spec.proxyVersion
+      name: Version
+      type: string
+    - JSONPath: .spec.revision
+      name: Revision
+      type: string
+    - JSONPath: .metadata.creationTimestamp
+      name: Age
+      type: date
   group: mesh.cloud.google.com
   names:
     kind: DataPlaneControl
@@ -107,20 +108,21 @@ spec:
               description: Current state of the controller.
               type: string
           required:
-          - state
+            - state
           type: object
       type: object
   version: v1alpha1
   versions:
-  - name: v1alpha1
-    served: true
-    storage: true
+    - name: v1alpha1
+      served: true
+      storage: true
 status:
   acceptedNames:
     kind: ""
     plural: ""
   conditions: []
   storedVersions: []
+# yamllint enable rule:line-length
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -438,4 +440,4 @@ spec:
                   path: istio-token
                   expirationSeconds: 43200
                 # yamllint disable-line rule:line-length
-                audience: "PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.token-audiences"}
+                audience: "PROJECT_ID.svc.id.goog"  # {"$ref":"#/definitions/io.k8s.cli.substitutions.token-audiences"}
