--- a/asm/istio/options/cni-managed.yaml
+++ b/asm/istio/options/cni-managed.yaml
@@ -448,4 +448,4 @@ spec:
                   path: istio-token
                   expirationSeconds: 43200
                   # yamllint disable-line rule:line-length
-                  audience: "PROJECT_ID.svc.id.goog"  # {"$ref":"#/definitions/io.k8s.cli.substitutions.token-audiences"}
+                  audience: "PROJECT_ID.svc.id.goog"  # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain"}
