--- a/scripts/asm-installer/cloudbuild-master.yaml
+++ b/scripts/asm-installer/cloudbuild-master.yaml
@@ -121,42 +121,42 @@ steps:
     #############
     # SLOW TESTS
     #############
-  - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
-    dir: 'scripts/asm-installer'
-    id: 'run-basic-suite'
-    entrypoint: '/bin/bash'
-    args:
-      - '-c'
-      - >
-        ./tests/run_basic_suite
-        --PROJECT_ID "${PROJECT_ID}"
-        --BUILD_ID "${BUILD_ID}"
-    env:
-      - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
-      - 'KEY_FILE=${_KEY_FILE}'
-      - '_CI_ASM_IMAGE_LOCATION=${_IMAGE_LOCATION}'
-      - '_CI_ASM_PKG_LOCATION=${_PKG_LOCATION}'
-      - '_CI_ASM_KPT_BRANCH=${_ASM_PKG_BRANCH}'
-    timeout: 600s
+#   - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+#     dir: 'scripts/asm-installer'
+#     id: 'run-basic-suite'
+#     entrypoint: '/bin/bash'
+#     args:
+#       - '-c'
+#       - >
+#         ./tests/run_basic_suite
+#         --PROJECT_ID "${PROJECT_ID}"
+#         --BUILD_ID "${BUILD_ID}"
+#     env:
+#       - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
+#       - 'KEY_FILE=${_KEY_FILE}'
+#       - '_CI_ASM_IMAGE_LOCATION=${_IMAGE_LOCATION}'
+#       - '_CI_ASM_PKG_LOCATION=${_PKG_LOCATION}'
+#       - '_CI_ASM_KPT_BRANCH=${_ASM_PKG_BRANCH}'
+#     timeout: 600s
 
-  - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
-    dir: 'scripts/asm-installer'
-    id: 'run-basic-suite-managed'
-    entrypoint: '/bin/bash'
-    args:
-      - '-c'
-      - >
-        ./tests/run_basic_suite_managed
-        --PROJECT_ID "${PROJECT_ID}"
-        --BUILD_ID "${BUILD_ID}"
-    env:
-      - '_LT_CLUSTER_NAME=long-term-test-cluster-environ-vm'
-      - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
-      - 'KEY_FILE=${_KEY_FILE}'
-      - '_CI_ASM_IMAGE_LOCATION=${_IMAGE_LOCATION}'
-      - '_CI_ASM_PKG_LOCATION=${_PKG_LOCATION}'
-      - '_CI_ASM_KPT_BRANCH=${_ASM_PKG_BRANCH}'
-    timeout: 600s
+#   - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+#     dir: 'scripts/asm-installer'
+#     id: 'run-basic-suite-managed'
+#     entrypoint: '/bin/bash'
+#     args:
+#       - '-c'
+#       - >
+#         ./tests/run_basic_suite_managed
+#         --PROJECT_ID "${PROJECT_ID}"
+#         --BUILD_ID "${BUILD_ID}"
+#     env:
+#       - '_LT_CLUSTER_NAME=long-term-test-cluster-environ-vm'
+#       - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
+#       - 'KEY_FILE=${_KEY_FILE}'
+#       - '_CI_ASM_IMAGE_LOCATION=${_IMAGE_LOCATION}'
+#       - '_CI_ASM_PKG_LOCATION=${_PKG_LOCATION}'
+#       - '_CI_ASM_KPT_BRANCH=${_ASM_PKG_BRANCH}'
+#     timeout: 600s
 
   - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
     dir: 'scripts/asm-installer'
