--- a/asm/istio/expansion/expose-istiod-rev.yaml
+++ b/asm/istio/expansion/expose-istiod-rev.yaml
@@ -28,7 +28,7 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: istiod-vs
+  name: istiod-vs # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.istiod-vs-name"}
   namespace: istio-system
 spec:
   hosts:
@@ -39,18 +39,18 @@ spec:
     - match:
         - port: 15012
           sniHosts:
-            - istiod.istio-system.svc
+            - istiod.istio-system.svc # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.istiodHost"}
       route:
         - destination:
-            host: istiod.istio-system.svc.cluster.local
+            host: istiod.istio-system.svc.cluster.local # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.istiodHostFQDN"}
             port:
               number: 15012
     - match:
         - port: 15017
           sniHosts:
-            - istiod.istio-system.svc
+            - istiod.istio-system.svc # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.istiodHost"}
       route:
         - destination:
-            host: istiod.istio-system.svc.cluster.local
+            host: istiod.istio-system.svc.cluster.local # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.istiodHostFQDN"}
             port:
               number: 443
