--- a/asm/istio/istio-operator.yaml
+++ b/asm/istio/istio-operator.yaml
@@ -25,7 +25,7 @@ spec:
     trustDomain: PROJECT_ID.svc.id.goog # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.trustDomain"}
     defaultConfig:
       proxyMetadata:
-        GKE_CLUSTER_URL: "IDP_URL" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.idp-url"}
+        GKE_CLUSTER_URL: "" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.idp-url"}
         GCP_METADATA: "PROJECT_ID|PROJECT_NUMBER|asm-cluster|us-central1-c" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-metadata"}
         CA_PROVIDER: "GoogleCA"
         PLUGINS: "GoogleTokenExchange"
@@ -64,7 +64,7 @@ spec:
         replicaCount: 2
         env:
           - name: GKE_CLUSTER_URL
-            value: "IDP_URL" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.idp-url"}
+            value: "" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.idp-url"}
           - name: GCP_METADATA
             value: "PROJECT_ID|PROJECT_NUMBER|asm-cluster|us-central1-c" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-metadata"}
           - name: SPIFFE_BUNDLE_ENDPOINTS
