Add option to use old default ingress

--- a/asm/istio/options/legacy-default-ingressgateway.yaml
+++ b/asm/istio/options/legacy-default-ingressgateway.yaml
@@ -20,5 +20,5 @@ spec:
   components:
     ingressGateways:
       - name: istio-ingressgateway
-        enabled: false
+        enabled: true
 # [END docs]
