--- a/asmcli/cloudbuild-main.yaml
+++ b/asmcli/cloudbuild-main.yaml
@@ -135,12 +135,12 @@ steps:
     #############
   - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
     dir: 'asmcli'
-    id: 'run-basic-suite-managed'
+    id: 'run-basic-suite'
     entrypoint: '/bin/bash'
     args:
       - '-c'
       - >
-        ./tests/run_basic_suite_managed
+        ./tests/run_basic_suite
         --PROJECT_ID "${PROJECT_ID}"
         --BUILD_ID "${BUILD_ID}"
     env:
