--- a/asmcli/cloudbuild-main.yaml
+++ b/asmcli/cloudbuild-main.yaml
@@ -135,12 +135,12 @@ steps:
     #############
   - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
     dir: 'asmcli'
-    id: 'run-basic-suite-managed'
+    id: 'run-basic-suite'
     entrypoint: '/bin/bash'
     args:
       - '-c'
       - >
-        ./tests/run_basic_suite_managed
+        ./tests/run_basic_suite
         --PROJECT_ID "${PROJECT_ID}"
         --BUILD_ID "${BUILD_ID}"
     env:
@@ -149,7 +149,7 @@ steps:
       - '_CI_ASM_IMAGE_LOCATION=${_IMAGE_LOCATION}'
       - '_CI_ASM_PKG_LOCATION=${_PKG_LOCATION}'
       - '_CI_ASM_KPT_BRANCH=${_ASM_PKG_BRANCH}'
-    timeout: 600s
+    timeout: 900s
 
   - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
     dir: 'asmcli'
@@ -168,7 +168,7 @@ steps:
       - '_CI_ASM_PKG_LOCATION=${_PKG_LOCATION}'
       - '_CI_ASM_KPT_BRANCH=${_ASM_PKG_BRANCH}'
       - '_LT_CLUSTER_NAME=long-term-test-cluster-environ'
-    timeout: 600s
+    timeout: 900s
 
 substitutions:
   _BUCKET_NAME: my-gcs-bucket
