--- a/samples/online-boutique/kubernetes-manifests/deployments/adservice.yaml
+++ b/samples/online-boutique/kubernetes-manifests/deployments/adservice.yaml
@@ -11,7 +11,12 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: ad
+  namespace: ad
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -30,7 +35,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
         - name: server
-          image: image: gcr.io/google-samples/microservices-demo/adservice:v0.2.2
+          image: gcr.io/google-samples/microservices-demo/adservice:v0.2.2
           ports:
             - containerPort: 9555
           env:
