--- a/samples/online-boutique/istio-manifests/frontend-gateway.yaml
+++ b/samples/online-boutique/istio-manifests/frontend-gateway.yaml
@@ -16,9 +16,10 @@ apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
   name: frontend-gateway
+  namespace: frontend
 spec:
   selector:
-    istio: ingressgateway # use Istio default gateway implementation
+    istio: ingressgateway
   servers:
   - port:
       number: 80
@@ -31,6 +32,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: frontend-ingress
+  namespace: frontend
 spec:
   hosts:
   - "*"
