--- a/samples/online-boutique/kubernetes-manifests/deployments/checkoutservice.yaml
+++ b/samples/online-boutique/kubernetes-manifests/deployments/checkoutservice.yaml
@@ -12,6 +12,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: checkout
+  namespace: checkout
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -29,7 +35,7 @@ spec:
       serviceAccountName: checkout
       containers:
         - name: server
-          image: image: gcr.io/google-samples/microservices-demo/checkoutservice:v0.2.2
+          image: gcr.io/google-samples/microservices-demo/checkoutservice:v0.2.2
           ports:
           - containerPort: 5050
           readinessProbe:
@@ -42,17 +48,17 @@ spec:
           - name: PORT
             value: "5050"
           - name: PRODUCT_CATALOG_SERVICE_ADDR
-            value: "productcatalogservice:3550"
+            value: "productcatalogservice.product-catalog.svc.cluster.local:3550"
           - name: SHIPPING_SERVICE_ADDR
-            value: "shippingservice:50051"
+            value: "shippingservice.shipping.svc.cluster.local:50051"
           - name: PAYMENT_SERVICE_ADDR
-            value: "paymentservice:50051"
+            value: "paymentservice.payment.svc.cluster.local:50051"
           - name: EMAIL_SERVICE_ADDR
-            value: "emailservice:5000"
+            value: "emailservice.email.svc.cluster.local:5000"
           - name: CURRENCY_SERVICE_ADDR
-            value: "currencyservice:7000"
+            value: "currencyservice.currency.svc.cluster.local:7000"
           - name: CART_SERVICE_ADDR
-            value: "cartservice:7070"
+            value: "cartservice.cart.svc.cluster.local:7070"
           # - name: DISABLE_STATS
           #   value: "1"
           # - name: DISABLE_TRACING
