Update CNI autopilot overlay. (#922)

--- a/asm/istio/options/cni-gke-autopilot.yaml
+++ b/asm/istio/options/cni-gke-autopilot.yaml
@@ -23,6 +23,11 @@ spec:
       namespace: istio-system
   values:
     cni:
+      podAnnotations:
+        autopilot.gke.io/no-connect: "true"
+      env:
+        - name: CNI_ENABLE_REINSTALL  # disable reinstall to make migration easy
+          value: "false"
       cniBinDir: /home/kubernetes/bin
       excludeNamespaces:
         - istio-system
