--- a/samples/gateways/istio-egressgateway.yaml
+++ b/samples/gateways/istio-egressgateway.yaml
@@ -181,6 +181,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: istio-egressgateway
+  labels:
+    app: istio-egressgateway
+    istio: egressgateway
 spec:
   type: ClusterIP
   ports:
