--- a/samples/gateways/istio-ingressgateway.yaml
+++ b/samples/gateways/istio-ingressgateway.yaml
@@ -185,6 +185,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: istio-ingressgateway
+  labels:
+    app: istio-ingressgateway
+    istio: ingressgateway
 spec:
   ports:
   - name: status-port
