Add labels to sample gateway Services (#940)

--- a/samples/gateways/istio-egressgateway.yaml
+++ b/samples/gateways/istio-egressgateway.yaml
@@ -179,6 +179,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: istio-egressgateway
+  labels:
+    app: istio-egressgateway
+    istio: egressgateway
 spec:
   type: ClusterIP
   ports:
