--- a/samples/gateways/istio-egressgateway.yaml
+++ b/samples/gateways/istio-egressgateway.yaml
@@ -15,7 +15,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: istio-egressgateway-service-account
+  name: istio-egressgateway
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -26,10 +26,6 @@ spec:
     matchLabels:
       app: istio-egressgateway
       istio: egressgateway
-  strategy:
-    rollingUpdate:
-      maxSurge: 100%
-      maxUnavailable: 25%
   template:
     metadata:
       annotations:
@@ -40,57 +36,9 @@ spec:
         app: istio-egressgateway
         istio: egressgateway
     spec:
-      affinity:
-        nodeAffinity:
-          preferredDuringSchedulingIgnoredDuringExecution:
-          - preference:
-              matchExpressions:
-              - key: kubernetes.io/arch
-                operator: In
-                values:
-                - amd64
-            weight: 2
-          - preference:
-              matchExpressions:
-              - key: kubernetes.io/arch
-                operator: In
-                values:
-                - ppc64le
-            weight: 2
-          - preference:
-              matchExpressions:
-              - key: kubernetes.io/arch
-                operator: In
-                values:
-                - s390x
-            weight: 2
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-            - matchExpressions:
-              - key: kubernetes.io/arch
-                operator: In
-                values:
-                - amd64
-                - ppc64le
-                - s390x
       containers:
-      - env:
-        - name: ISTIO_META_UNPRIVILEGED_POD
-          value: "true"
-        - name: ISTIO_META_ROUTER_MODE
-          value: standard
+      - name: istio-proxy
         image: auto # The image will automatically update each time the pod starts.
-        name: istio-proxy
-        ports:
-        - containerPort: 8080
-          protocol: TCP
-        - containerPort: 8443
-          protocol: TCP
-        - containerPort: 15443
-          protocol: TCP
-        - containerPort: 15090
-          name: http-envoy-prom
-          protocol: TCP
         resources:
           limits:
             cpu: 2000m
@@ -98,36 +46,50 @@ spec:
           requests:
             cpu: 100m
             memory: 128Mi
-        securityContext:
-          allowPrivilegeEscalation: false
-          capabilities:
-            drop:
-            - ALL
-          privileged: false
-          readOnlyRootFilesystem: true
-        volumeMounts:
-        - mountPath: /etc/istio/egressgateway-certs
-          name: egressgateway-certs
-          readOnly: true
-        - mountPath: /etc/istio/egressgateway-ca-certs
-          name: egressgateway-ca-certs
-          readOnly: true
-      securityContext:
-        fsGroup: 1337
-        runAsGroup: 1337
-        runAsNonRoot: true
-        runAsUser: 1337
-      serviceAccountName: istio-egressgateway-service-account
-      volumes:
-      - name: egressgateway-certs
-        secret:
-          optional: true
-          secretName: istio-egressgateway-certs
-      - name: egressgateway-ca-certs
-        secret:
-          optional: true
-          secretName: istio-egressgateway-ca-certs
+      serviceAccountName: istio-egressgateway
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: istio-egressgateway
+  labels:
+    app: istio-egressgateway
+    istio: egressgateway
+spec:
+  ports:
+  # Any ports exposed in Gateway resources should be exposed here.
+  - name: http2
+    port: 80
+  - name: https
+    port: 443
+  selector:
+    istio: egressgateway
+    app: istio-egressgateway
+---
+# Role and RoleBinding allow the gateway to access certificates
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: istio-egressgateway
+rules:
+- apiGroups: [""]
+  resources: ["secrets"]
+  verbs: ["get", "watch", "list"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: istio-egressgateway
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: istio-egressgateway-sds
+subjects:
+- kind: ServiceAccount
+  name: istio-egressgateway-service-account
+---
+# Optional: PodDisruptionBudget will instruct Kubernetes to ensure at least 1 replica
+# is available when possible
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
@@ -139,27 +101,8 @@ spec:
       istio: egressgateway
       app: istio-egressgateway
 ---
-apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
-metadata:
-  name: istio-egressgateway-sds
-rules:
-- apiGroups: [""]
-  resources: ["secrets"]
-  verbs: ["get", "watch", "list"]
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  name: istio-egressgateway-sds
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: istio-egressgateway-sds
-subjects:
-- kind: ServiceAccount
-  name: istio-egressgateway-service-account
----
+# Optional: HorizontalPodAutoscaler will automatically scale the gateway replica count based on
+# CPU utilization
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
@@ -176,30 +119,3 @@ spec:
     apiVersion: apps/v1
     kind: Deployment
     name: istio-egressgateway
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: istio-egressgateway
-  labels:
-    app: istio-egressgateway
-    istio: egressgateway
-spec:
-  type: ClusterIP
-  ports:
-  - name: http2
-    port: 80
-    protocol: TCP
-    targetPort: 8080
-  - name: https
-    port: 443
-    protocol: TCP
-    targetPort: 8443
-  - name: tls
-    port: 15443
-    protocol: TCP
-    targetPort: 15443
-  selector:
-    istio: egressgateway
-    app: istio-egressgateway
----
